# jfy_inverter_reader

./: CMakeLists.txt  Makefile  README.md  jfyconnection.cpp  jfyconnection.h  jfyserial.cpp  jfyserial.h  jfysocket.cpp  main.cpp
